Fix: Switch overlap form actions

--- a/src/AppModule/components/AppFormActions/assets/scss/style.scss
+++ b/src/AppModule/components/AppFormActions/assets/scss/style.scss
@@ -4,7 +4,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
+    z-index: 9;
     background-color: #fff;
     box-shadow: 0 -7px 40px var(--secondary-20);
-
 }
