--- a/src/AppModule/containers/AppNavigation/assets/scss/style.scss
+++ b/src/AppModule/containers/AppNavigation/assets/scss/style.scss
@@ -2,7 +2,7 @@
 @import "./../../../../assets/scss/screens-sizes";
 
 .sidebar {
-    z-index: 3;
+    z-index: 10;
     background-color: $sidebar-bg-clr;
 
     .item-more {
